[package]
name = "kodeks"
version = "0.1.0"
edition = "2024"

description = "Database model library for the Komrad ecosystem"
license = "AGPL-3.0-or-later"
readme = "README.md"

repository = "https://github.com/komrad-company/Kodeks"

[dependencies]
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "migrate",
] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

kompiler = { git = "https://github.com/komrad-company/Kompiler.git", tag = "v0.1.0-rc1" }
khronika = { git = "https://github.com/komrad-company/Khronika.git", tag = "v0.1.0-rc1" }
